more viewport changes

--- a/index.html
+++ b/index.html
@@ -1621,25 +1621,25 @@
             }
 
             .header {
-                padding-bottom: 6px;
-                margin-bottom: 8px;
+                padding-bottom: 12px;
+                margin-bottom: 12px;
             }
 
             .newspaper-title {
-                font-size: 16px;
+                font-size: 20px;
                 letter-spacing: 1px;
             }
 
             .quote-container {
-                padding: 8px 0;
-                margin-bottom: 8px;
+                padding: 12px 0;
+                margin-bottom: 12px;
             }
 
             .quote-text {
                 font-size: 14px;
                 line-height: 1.3;
                 padding: 0 6px;
-                margin-bottom: 10px;
+                margin-bottom: 8px;
             }
 
             .author {
@@ -1790,40 +1790,58 @@
 
             /* Reduced Statistics Size for Mobile */
             .congrats-stats {
-                gap: 15px;
-                margin: 20px 0;
+                gap: 12px;
+                margin: 15px 0;
             }
 
             .stat-item {
-                padding: 12px;
+                padding: 10px;
             }
 
             .stat-value {
-                font-size: 20px;
-                margin-bottom: 4px;
+                font-size: 18px;
+                margin-bottom: 3px;
             }
 
             .stat-label {
-                font-size: 10px;
+                font-size: 9px;
             }
 
             /* Stats Modal - Reduced Size */
             .stats-grid {
-                gap: 15px;
-                margin: 20px 0;
+                gap: 12px;
+                margin: 15px 0;
             }
 
             .stat-card {
-                padding: 15px;
+                padding: 12px;
             }
 
             .stat-card .stat-value {
-                font-size: 28px;
-                margin: 8px 0;
+                font-size: 24px;
+                margin: 6px 0;
             }
 
             .stat-card .stat-label {
+                font-size: 12px;
+            }
+
+            /* Improved Quote Layout When Completed */
+            .quote-complete .quote-container {
+                padding: 15px 0;
+                margin-bottom: 15px;
+            }
+
+            .quote-complete .quote-text {
+                font-size: 16px;
+                line-height: 1.4;
+                padding: 0 8px;
+                margin-bottom: 12px;
+            }
+
+            .quote-complete .author {
                 font-size: 14px;
+                padding-top: 8px;
             }
         }
 
@@ -1835,8 +1853,8 @@
             }
 
             .header {
-                padding-bottom: 8px;
-                margin-bottom: 6px;
+                padding-bottom: 10px;
+                margin-bottom: 8px;
             }
 
             .newspaper-title {
@@ -1844,8 +1862,8 @@
             }
 
             .quote-container {
-                padding: 4px 0;
-                margin-bottom: 4px;
+                padding: 8px 0;
+                margin-bottom: 8px;
             }
 
             .quote-text {
@@ -1857,6 +1875,24 @@
 
             .author {
                 font-size: 10px;
+            }
+
+            /* Improved Quote Layout When Completed for Small Mobile */
+            .quote-complete .quote-container {
+                padding: 12px 0;
+                margin-bottom: 12px;
+            }
+
+            .quote-complete .quote-text {
+                font-size: 14px;
+                line-height: 1.3;
+                padding: 0 6px;
+                margin-bottom: 10px;
+            }
+
+            .quote-complete .author {
+                font-size: 12px;
+                padding-top: 6px;
             }
 
             /* Reduced Statistics Size for Small Mobile */
@@ -1986,8 +2022,8 @@
             }
 
             .header {
-                padding-bottom: 6px;
-                margin-bottom: 4px;
+                padding-bottom: 8px;
+                margin-bottom: 6px;
             }
 
             .newspaper-title {
@@ -1995,8 +2031,26 @@
             }
 
             .quote-container {
-                padding: 3px 0;
-                margin-bottom: 3px;
+                padding: 6px 0;
+                margin-bottom: 6px;
+            }
+
+            /* Improved Quote Layout When Completed for Ultra Small Mobile */
+            .quote-complete .quote-container {
+                padding: 10px 0;
+                margin-bottom: 10px;
+            }
+
+            .quote-complete .quote-text {
+                font-size: 12px;
+                line-height: 1.2;
+                padding: 0 4px;
+                margin-bottom: 8px;
+            }
+
+            .quote-complete .author {
+                font-size: 10px;
+                padding-top: 4px;
             }
 
             /* Reduced Statistics Size for Ultra Small Mobile */
