more viewport changes

--- a/index.html
+++ b/index.html
@@ -1790,40 +1790,40 @@
 
             /* Reduced Statistics Size for Mobile */
             .congrats-stats {
-                gap: 12px;
-                margin: 15px 0;
+                gap: 8px;
+                margin: 10px 0;
             }
 
             .stat-item {
-                padding: 10px;
+                padding: 6px;
             }
 
             .stat-value {
-                font-size: 18px;
-                margin-bottom: 3px;
+                font-size: 16px;
+                margin-bottom: 2px;
             }
 
             .stat-label {
-                font-size: 9px;
+                font-size: 8px;
             }
 
             /* Stats Modal - Reduced Size */
             .stats-grid {
-                gap: 12px;
-                margin: 15px 0;
+                gap: 8px;
+                margin: 10px 0;
             }
 
             .stat-card {
-                padding: 12px;
+                padding: 8px;
             }
 
             .stat-card .stat-value {
-                font-size: 24px;
-                margin: 6px 0;
+                font-size: 20px;
+                margin: 4px 0;
             }
 
             .stat-card .stat-label {
-                font-size: 12px;
+                font-size: 10px;
             }
 
             /* Improved Quote Layout When Completed */
@@ -1842,6 +1842,28 @@
             .quote-complete .author {
                 font-size: 14px;
                 padding-top: 8px;
+            }
+
+            /* Hamburger Menu Improvements */
+            .hamburger-menu {
+                left: 12px;
+            }
+
+            .hamburger-icon {
+                width: 24px;
+                height: 20px;
+            }
+
+            .hamburger-icon span {
+                height: 2px;
+            }
+
+            .hamburger-icon.active span:nth-child(1) {
+                transform: rotate(45deg) translate(6px, 6px);
+            }
+
+            .hamburger-icon.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(6px, -6px);
             }
         }
 
@@ -1897,40 +1919,62 @@
 
             /* Reduced Statistics Size for Small Mobile */
             .congrats-stats {
-                gap: 12px;
-                margin: 15px 0;
+                gap: 6px;
+                margin: 8px 0;
             }
 
             .stat-item {
-                padding: 10px;
+                padding: 4px;
             }
 
             .stat-value {
-                font-size: 18px;
-                margin-bottom: 3px;
+                font-size: 14px;
+                margin-bottom: 1px;
             }
 
             .stat-label {
-                font-size: 9px;
+                font-size: 7px;
             }
 
             /* Stats Modal - Reduced Size for Small Mobile */
             .stats-grid {
-                gap: 12px;
-                margin: 15px 0;
+                gap: 6px;
+                margin: 8px 0;
             }
 
             .stat-card {
-                padding: 12px;
+                padding: 6px;
             }
 
             .stat-card .stat-value {
-                font-size: 24px;
-                margin: 6px 0;
+                font-size: 18px;
+                margin: 3px 0;
             }
 
             .stat-card .stat-label {
-                font-size: 12px;
+                font-size: 9px;
+            }
+
+            /* Hamburger Menu Improvements for Small Mobile */
+            .hamburger-menu {
+                left: 8px;
+            }
+
+            .hamburger-icon {
+                width: 20px;
+                height: 16px;
+            }
+
+            .hamburger-icon span {
+                height: 2px;
+            }
+
+            .hamburger-icon.active span:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+
+            .hamburger-icon.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(5px, -5px);
             }
 
             /* Even More Compact Touch Targets for Small Mobile */
@@ -2146,6 +2190,66 @@
             .input-title {
                 font-size: 10px;
                 margin-bottom: 4px;
+            }
+
+            /* Ultra Compact Statistics for Ultra Small Mobile */
+            .congrats-stats {
+                gap: 4px;
+                margin: 6px 0;
+            }
+
+            .stat-item {
+                padding: 3px;
+            }
+
+            .stat-value {
+                font-size: 12px;
+                margin-bottom: 1px;
+            }
+
+            .stat-label {
+                font-size: 6px;
+            }
+
+            /* Stats Modal - Ultra Compact for Ultra Small Mobile */
+            .stats-grid {
+                gap: 4px;
+                margin: 6px 0;
+            }
+
+            .stat-card {
+                padding: 4px;
+            }
+
+            .stat-card .stat-value {
+                font-size: 16px;
+                margin: 2px 0;
+            }
+
+            .stat-card .stat-label {
+                font-size: 8px;
+            }
+
+            /* Hamburger Menu Improvements for Ultra Small Mobile */
+            .hamburger-menu {
+                left: 6px;
+            }
+
+            .hamburger-icon {
+                width: 18px;
+                height: 14px;
+            }
+
+            .hamburger-icon span {
+                height: 2px;
+            }
+
+            .hamburger-icon.active span:nth-child(1) {
+                transform: rotate(45deg) translate(4px, 4px);
+            }
+
+            .hamburger-icon.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(4px, -4px);
             }
         }
 
