more viewport changes

--- a/index.html
+++ b/index.html
@@ -2289,6 +2289,13 @@
 
             <div class="menu-section">
                 <h4><i class="fas fa-gamepad"></i> Game</h4>
+                <div class="menu-item menu-link" id="menuCalendarLink">
+                    <div class="menu-item-label">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Past Quotes</span>
+                    </div>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
                 <div class="menu-item menu-link" id="menuStatsLink">
                     <div class="menu-item-label">
                         <i class="fas fa-chart-bar"></i>
@@ -2296,13 +2303,7 @@
                     </div>
                     <i class="fas fa-chevron-right"></i>
                 </div>
-                <div class="menu-item menu-link" id="menuCalendarLink">
-                    <div class="menu-item-label">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Past Challenges</span>
-                    </div>
-                    <i class="fas fa-chevron-right"></i>
-                </div>
+                
                 <div class="menu-item menu-link" id="menuHelpLink">
                     <div class="menu-item-label">
                         <i class="fas fa-question-circle"></i>
