--- a/index.html
+++ b/index.html
@@ -287,8 +287,15 @@
 
         @media (max-width: 600px) {
             .cta-grid {
-                flex-direction: column;
-                gap: 25px;
+                flex-direction: row;
+                gap: 15px;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .cta-text {
+                font-size: 14px;
+                margin-bottom: 10px;
             }
 
             /* Intermediate mobile breakpoint to prevent header size jumps */
@@ -311,6 +318,11 @@
             .header {
                 padding-bottom: 9px;
                 margin-bottom: 9px;
+            }
+
+            .cta-text {
+                font-size: 12px;
+                margin-bottom: 8px;
             }
         }
 
@@ -1613,6 +1625,12 @@
                 border-radius: 4px;
             }
 
+            /* Reduced text sizes for mobile */
+            .cta-text {
+                font-size: 13px;
+                margin-bottom: 8px;
+            }
+
             .letter-btn {
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
                 transition: all 0.15s ease;
@@ -1697,7 +1715,7 @@
             /* Reduced Statistics Size for Mobile */
             .congrats-stats {
                 gap: 8px;
-                margin: 10px 0;
+                margin: 25px 0 10px 0;
             }
 
             .stat-item {
@@ -1826,7 +1844,7 @@
             /* Reduced Statistics Size for Small Mobile */
             .congrats-stats {
                 gap: 6px;
-                margin: 8px 0;
+                margin: 20px 0 8px 0;
             }
 
             .stat-item {
@@ -1968,6 +1986,12 @@
                 font-size: 12px;
                 border-radius: 3px;
             }
+
+            /* Reduced text sizes for small mobile */
+            .cta-text {
+                font-size: 11px;
+                margin-bottom: 6px;
+            }
         }
 
         @media (max-width: 360px) {
@@ -2013,7 +2037,7 @@
             /* Reduced Statistics Size for Ultra Small Mobile */
             .congrats-stats {
                 gap: 10px;
-                margin: 12px 0;
+                margin: 30px 0 12px 0;
             }
 
             .stat-item {
@@ -2071,6 +2095,12 @@
                 padding: 4px 10px;
                 font-size: 10px;
                 border-radius: 3px;
+            }
+
+            /* Reduced text sizes for ultra small mobile */
+            .cta-text {
+                font-size: 9px;
+                margin-bottom: 4px;
             }
 
             .btn {
