--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            justify-content: space-between;
         }
 
         .header {
@@ -123,6 +124,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
+            min-height: 0;
         }
 
         .quote-container:before,
@@ -154,6 +157,10 @@
             font-weight: 400;
             letter-spacing: 0.3px;
             font-style: italic;
+            width: 100%;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .quote-word {
@@ -213,7 +220,9 @@
         }
 
         .congrats {
-            margin-bottom: 25px;
+            margin-top: auto;
+            margin-bottom: 0;
+            padding-bottom: 20px;
             padding: 30px;
             background: linear-gradient(135deg, #f9f9f9 0%, #e8e8e8 100%);
             border: 2px solid #222;
@@ -221,6 +230,8 @@
             display: none;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            position: relative;
+            z-index: 5;
         }
 
         .congrats.show {
@@ -283,6 +294,9 @@
         .cta-section {
             text-align: center;
             flex: 0 0 auto;
+            position: relative;
+            z-index: 10;
+            pointer-events: auto;
         }
 
         @media (max-width: 600px) {
@@ -344,6 +358,9 @@
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
+            position: relative;
+            z-index: 10;
+            pointer-events: auto;
         }
 
         .cta-button:hover {
