--- a/index.html
+++ b/index.html
@@ -220,18 +220,17 @@
         }
 
         .congrats {
-            margin-top: auto;
-            margin-bottom: 0;
-            padding-bottom: 20px;
-            padding: 30px;
-            background: linear-gradient(135deg, #f9f9f9 0%, #e8e8e8 100%);
-            border: 2px solid #222;
-            text-align: center;
+            padding: 20px;
+            background: #f9f9f9;
+            border: 1px solid #ddd;
+            margin-bottom: 20px;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+            min-height: 180px;
             display: none;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            position: relative;
-            z-index: 5;
+            flex-shrink: 0;
+            text-align: center;
         }
 
         .congrats.show {
@@ -248,25 +247,34 @@
         }
 
         .congrats-stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 20px;
-            margin: 25px 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin: 20px 0;
+            flex-wrap: wrap;
         }
 
         .stat-item {
-            background: white;
-            padding: 15px;
-            border-radius: 6px;
-            border: 1px solid #ddd;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background: #fff;
+            border: 1px solid #222;
+            padding: 10px 15px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+            min-width: 80px;
+            transition: all 0.2s;
+        }
+
+        .stat-item:hover {
+            background: #f5f5f5;
         }
 
         .stat-value {
-            font-size: 24px;
-            font-weight: 700;
+            font-size: 20px;
+            font-weight: 600;
             color: #222;
-            margin-bottom: 5px;
+            margin: 0;
         }
 
         .stat-label {
@@ -274,29 +282,22 @@
             color: #666;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            margin: 0;
         }
 
         .congrats-cta {
-            margin-top: 25px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
+            margin-top: 15px;
         }
 
         .cta-grid {
             display: flex;
             justify-content: center;
-            align-items: center;
-            gap: 40px;
-            max-width: 600px;
-            margin: 0 auto;
+            gap: 15px;
+            flex-wrap: wrap;
         }
 
         .cta-section {
             text-align: center;
-            flex: 0 0 auto;
-            position: relative;
-            z-index: 10;
-            pointer-events: auto;
         }
 
         @media (max-width: 600px) {
@@ -307,10 +308,7 @@
                 justify-content: center;
             }
 
-            .cta-text {
-                font-size: 14px;
-                margin-bottom: 10px;
-            }
+
 
             /* Intermediate mobile breakpoint to prevent header size jumps */
             .newspaper-title {
@@ -334,39 +332,28 @@
                 margin-bottom: 9px;
             }
 
-            .cta-text {
-                font-size: 12px;
-                margin-bottom: 8px;
-            }
+
         }
 
-        .cta-text {
-            font-size: 16px;
-            color: #444;
-            margin-bottom: 15px;
-        }
+
 
         .cta-button {
-            background: #222;
-            color: white;
-            border: none;
-            padding: 12px 25px;
+            padding: 10px 20px;
+            background: #fff;
+            border: 1px solid #222;
             font-size: 16px;
-            font-weight: 600;
-            border-radius: 6px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 8px;
             text-decoration: none;
-            display: inline-block;
-            position: relative;
-            z-index: 10;
-            pointer-events: auto;
+            color: #222;
         }
 
         .cta-button:hover {
-            background: #444;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            background: #222;
+            color: white;
         }
 
         .input-area {
@@ -1642,11 +1629,7 @@
                 border-radius: 4px;
             }
 
-            /* Reduced text sizes for mobile */
-            .cta-text {
-                font-size: 13px;
-                margin-bottom: 8px;
-            }
+            /* Mobile CTA button adjustments */
 
             .letter-btn {
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
@@ -2004,11 +1987,7 @@
                 border-radius: 3px;
             }
 
-            /* Reduced text sizes for small mobile */
-            .cta-text {
-                font-size: 11px;
-                margin-bottom: 6px;
-            }
+            /* Small mobile CTA button adjustments */
         }
 
         @media (max-width: 360px) {
@@ -2114,11 +2093,7 @@
                 border-radius: 3px;
             }
 
-            /* Reduced text sizes for ultra small mobile */
-            .cta-text {
-                font-size: 9px;
-                margin-bottom: 4px;
-            }
+            /* Ultra small mobile CTA button adjustments */
 
             .btn {
                 padding: 3px 6px;
@@ -2408,6 +2383,7 @@
         </div>
 
         <div class="congrats" id="congrats">
+            <div class="input-title">Puzzle Complete!</div>
             <div class="congrats-stats">
                 <div class="stat-item">
                     <div class="stat-value" id="congratsPlayed">0</div>
@@ -2429,18 +2405,12 @@
 
             <div class="congrats-cta">
                 <div class="cta-grid">
-                    <div class="cta-section">
-                        <div class="cta-text">Ready for more?</div>
-                        <a href="#" class="cta-button" id="pastChallengesBtn">
-                            <i class="fas fa-calendar-alt"></i> Past Quotes
-                        </a>
-                    </div>
-                    <div class="cta-section">
-                        <div class="cta-text">Inspire someone else</div>
-                        <button class="cta-button" id="shareFromCongratsBtn">
-                            <i class="fas fa-share"></i> Share Quote
-                        </button>
-                    </div>
+                    <a href="#" class="cta-button" id="pastChallengesBtn">
+                        <i class="fas fa-calendar-alt"></i> Past Quotes
+                    </a>
+                    <button class="cta-button" id="shareFromCongratsBtn">
+                        <i class="fas fa-share"></i> Share Quote
+                    </button>
                 </div>
             </div>
         </div>
