hide select a song option

--- a/index.html
+++ b/index.html
@@ -2377,7 +2377,8 @@
                         </label>
                     </div>
                 </div>
-                <div class="menu-item menu-link" id="menuChangeSongLink">
+                <!-- Music selection hidden -->
+                <div class="menu-item menu-link" id="menuChangeSongLink" style="display: none;">
                     <div class="menu-item-label">
                         <i class="fas fa-compact-disc"></i>
                         <span>Change Song</span>
@@ -2601,7 +2602,8 @@
                         </label>
                     </div>
                 </div>
-                <div class="setting-item">
+                <!-- Music selection hidden -->
+                <div class="setting-item" style="display: none;">
                     <div class="setting-label">
                         <i class="fas fa-compact-disc"></i>
                         <span>Change Song</span>
@@ -2619,8 +2621,8 @@
         </div>
     </div>
 
-    <!-- Music Selection Modal -->
-    <div class="modal" id="musicSelectionModal">
+    <!-- Music Selection Modal - Hidden -->
+    <div class="modal" id="musicSelectionModal" style="display: none !important;">
         <div class="modal-content">
             <div class="modal-header">
                 <h2>Select Background Music</h2>
