--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         .title-date-container {
             display: flex;
             align-items: center;
+            gap: 12px;
+        }
+
+        .game-logo {
+            height: 32px;
+            width: auto;
+            object-fit: contain;
         }
 
         .newspaper-title {
@@ -341,6 +348,10 @@
 
 
             /* Intermediate mobile breakpoint to prevent header size jumps */
+            .game-logo {
+                height: 26px;
+            }
+
             .newspaper-title {
                 font-size: 19px;
             }
@@ -353,6 +364,10 @@
 
         @media (max-width: 520px) {
             /* Additional intermediate breakpoint to prevent header size jumps */
+            .game-logo {
+                height: 22px;
+            }
+
             .newspaper-title {
                 font-size: 17px;
             }
@@ -1588,6 +1603,10 @@
                 margin-bottom: 12px;
             }
 
+            .game-logo {
+                height: 28px;
+            }
+
             .newspaper-title {
                 font-size: 20px;
                 letter-spacing: 1px;
@@ -1854,6 +1873,10 @@
                 margin-bottom: 8px;
             }
 
+            .game-logo {
+                height: 24px;
+            }
+
             .newspaper-title {
                 font-size: 18px;
             }
@@ -2053,6 +2076,10 @@
             .header {
                 padding-bottom: 8px;
                 margin-bottom: 6px;
+            }
+
+            .game-logo {
+                height: 20px;
             }
 
             .newspaper-title {
@@ -2426,6 +2453,7 @@
                     </div>
                 </div>
                 <div class="title-date-container">
+                    <img src="assets/logo.png" alt="Daily Quote Puzzle Logo" class="game-logo">
                     <div class="newspaper-title">Daily Quote Puzzle</div>
                 </div>
             </div>
