--- a/index.html
+++ b/index.html
@@ -2172,14 +2172,137 @@
                 border-radius: 3px;
             }
 
-            /* Ultra small mobile CTA button adjustments */
+                    /* Ultra small mobile CTA button adjustments */
 
-            .btn {
-                padding: 3px 6px;
-                font-size: 10px;
-                min-height: 28px;
-                min-width: 40px;
+        .btn {
+            padding: 3px 6px;
+            font-size: 10px;
+            min-height: 28px;
+            min-width: 40px;
+        }
+
+        /* Next Quote Timer Styles */
+        .next-quote-timer {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(255, 255, 255, 0.95);
+            border: 2px solid #222;
+            border-radius: 8px;
+            padding: 12px 20px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            z-index: 100;
+            font-family: 'Special Elite', 'Courier New', monospace;
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+        }
+
+        .next-quote-timer:hover {
+            transform: translateX(-50%) scale(1.02);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .timer-label {
+            font-size: 14px;
+            font-weight: 600;
+            color: #222;
+            white-space: nowrap;
+        }
+
+        .timer-display {
+            font-size: 16px;
+            font-weight: 700;
+            color: #222;
+            font-family: 'Courier New', monospace;
+            letter-spacing: 1px;
+        }
+
+        .timer-display span {
+            background: #f0f0f0;
+            padding: 4px 6px;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+            margin: 0 2px;
+            min-width: 30px;
+            display: inline-block;
+            text-align: center;
+        }
+
+        /* Hide timer when viewing past quotes or when puzzle is complete */
+        .next-quote-timer.hidden {
+            display: none;
+        }
+
+        /* Mobile responsive timer */
+        @media (max-width: 768px) {
+            .next-quote-timer {
+                bottom: 15px;
+                padding: 10px 16px;
+                gap: 8px;
             }
+
+            .timer-label {
+                font-size: 12px;
+            }
+
+            .timer-display {
+                font-size: 14px;
+            }
+
+            .timer-display span {
+                padding: 3px 5px;
+                min-width: 25px;
+                font-size: 12px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .next-quote-timer {
+                bottom: 10px;
+                padding: 8px 12px;
+                gap: 6px;
+            }
+
+            .timer-label {
+                font-size: 11px;
+            }
+
+            .timer-display {
+                font-size: 12px;
+            }
+
+            .timer-display span {
+                padding: 2px 4px;
+                min-width: 22px;
+                font-size: 11px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .next-quote-timer {
+                bottom: 8px;
+                padding: 6px 10px;
+                gap: 4px;
+            }
+
+            .timer-label {
+                font-size: 10px;
+            }
+
+            .timer-display {
+                font-size: 11px;
+            }
+
+            .timer-display span {
+                padding: 1px 3px;
+                min-width: 20px;
+                font-size: 10px;
+            }
+        }
 
             .quote-word.scrambled {
                 padding: 1px 3px;
@@ -2512,6 +2635,16 @@
                     <span class="ad-indicator">Watch Ad</span>
                     <span class="cooldown-timer" id="unscrambleTimer"></span>
                 </button>
+            </div>
+        </div>
+
+        <!-- Timer countdown for next quote -->
+        <div class="next-quote-timer" id="nextQuoteTimer">
+            <div class="timer-label">Next Quote In:</div>
+            <div class="timer-display">
+                <span class="timer-hours" id="timerHours">00</span>h
+                <span class="timer-minutes" id="timerMinutes">00</span>m
+                <span class="timer-seconds" id="timerSeconds">00</span>s
             </div>
         </div>
     </div>
